--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-permission android:name="android.permission.INTERNET" />
         <activity android:name=".StartActivity" />
         <activity android:name=".LoginActivity"></activity>
     </application>
